fix spacing on tables

--- a/_sass/_facilitate.scss
+++ b/_sass/_facilitate.scss
@@ -302,7 +302,9 @@ section#discourse-community {
     }
 
     .topic-title {
-      color: $gray-darker;
+      a {
+        color: $gray-darker;
+      }
     }
 
     .users {
@@ -379,6 +381,14 @@ section#lets-do-it {
 
     .welcome-text {
       margin: 10px 0;
+    }
+  }
+
+  section#discourse-community {
+    .topics {
+      .topic-title {
+        min-width: 180px;
+      }
     }
   }
 
